--- a/client/spoutlets.html
+++ b/client/spoutlets.html
@@ -25,6 +25,8 @@
                   <li><a href="#"><i class="icon-white
                                             icon-bookmark"></i></a></li>
                   <li class="divider-vertical"></li>
+                  {{loginButtons}} 
+                  <!--
                   <li class="dropdown">
                     <a href="#" class="dropdown-toggle"
                        data-toggle="dropdown"><i class="icon-user
@@ -37,6 +39,7 @@
                       <li><a href="#">Logout</a></li>
                     </ul>
                   </li>
+                  -->
                 </ul>
               </div>
             </div>
