--- a/client/spoutlets.html
+++ b/client/spoutlets.html
@@ -8,11 +8,15 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="stylesheet" type="text/css" href="spoutlets.css">
+    <script src="/js/jquery-1.8.1.js"></script>
+    <script src="/js/bootstrap.js"></script>  
+    <script src="/js/timeline.js"></script>
+    <script src="/js/storyjs-embed.js"></script>
+    <script src="/js/spout.js"></script>
   </head>
   
   <body>
   {{#if currentUser}}
- 
     <header>
       <div class="navbar navbar-inverse navbar-static-top">
         <div class="navbar-inner">
@@ -146,7 +150,10 @@
       <!-- Timeline section -->
       <div class="row">
         <div class="span10">
-      <div id="my-timeline"></div>
+{{#constant}}
+<div id="my-timeline"></div>
+
+{{/constant}}
         </div>
         <div class="span2">
           <div class="row">
@@ -197,23 +204,14 @@
         </div>
       </div> <!-- end of Comment section -->
     </div>
-    <script src="../public/js/jquery-1.8.1.js"></script>
-    <script src="../public/js/bootstrap.js"></script>
+
     <!-- BEGIN TimelineJS -->
-    <script type="text/javascript" src="../public/compiled/js/storyjs-embed.js"></script>
+    <script type="text/javascript" src="/compiled/js/storyjs-embed.js"></script>
+    
     <script>
-      $(document).ready(function() {
-      createStoryJS({
-      type:		'timeline',
-      width:		'100%',
-      height:		'600',
-      source:		'example_json.json',
-      embed_id:	        'my-timeline',
-      start_at_end:     true,
-      start_zoom_adjust: '3'
-      });
-      });
+
     </script>
+    
     <!-- END TimelineJS -->
     {{else}}
 
@@ -514,11 +512,7 @@
         </li>
       </ul>
     </div>
-    <script src="../public/js/jquery-1.8.1.js"></script>
-    <script src="../public/js/bootstrap.js"></script>
+    <script src="/js/jquery-1.8.1.js"></script>
+    <script src="/js/bootstrap.js"></script>
      {{/if}}
   </body>
-
-
-
-
